--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "firebase-admin": "^13.6.0",
     "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
     "multer": "^2.0.2",
-    "sqlite3": "^5.1.6"
+    "path": "^0.12.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "jest": "^30.2.0",
